Fix race condition in reading fstype on partition table import.

Thanks to Christoph Vogtländer for reporting and fixing.

BUG: 400330